# GenderTrainer

./: CMakeLists.txt  CvGabor.cpp  GenderTrainer.kdev4  LBH-HF.hpp  LBP-HF.cpp  PCA.cpp  PCA.hpp  README.md  cvgabor.h  faceProcessor.cpp  faceProcessor.hpp  filereader.cpp  filereader.hpp  globalHeader.hpp  images2Columns.cpp  images2Columns.hpp  main.cpp  sharkStuff.hpp  trainImage.hpp  trainer.cpp  trainer.hpp
